kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prato-pronto-api
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 80
  selector:
    app: prato-pronto-api
